--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "main": "Gruntfile.js",
   "scripts": {
+    "build": "grunt build",
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
